# openGL-SSAO-SSDO

./: README.md
data/Luminaris/FBX/: Luminaris.FBX
src/: CMakeLists.txt  gl_env.h  main.cpp  renderer_both.h  renderer_cube_quad.h  renderer_image.h  renderer_off.h  renderer_ssao.h  renderer_ssdo.h  utils_camera.h  utils_light.h  utils_mesh.h  utils_model.h  utils_shader_program.h
src/shader/both/: lighting.fs
src/shader/image/: image.fs
src/shader/off/: geometry.fs  geometry_plain.fs  lighting.fs
src/shader/ssao/: geometry_plain.fs  lighting.fs  ssao.fs
src/shader/ssdo/: blur.fs  geometry.fs  lighting.fs  ssdo.fs
